--- a/index.html
+++ b/index.html
@@ -356,6 +356,16 @@ $('body').click(function() {
   </script>
 
 
+<script type="text/javascript">
+  window._mfq = window._mfq || [];
+  (function() {
+    var mf = document.createElement("script");
+    mf.type = "text/javascript"; mf.defer = true;
+    mf.src = "//cdn.mouseflow.com/projects/e2df099f-636f-4966-92a8-ec5b6b0ddcbf.js";
+    document.getElementsByTagName("head")[0].appendChild(mf);
+  })();
+</script>
+
 
 
 
